--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0",
   "description": "Node js rest api",
   "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Shkulipa/justindev-express-mysql-jwt"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
